[project]
name = "micropython-units"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "coverage>=7.6.10",
    "pylint>=3.3.3",
    "pyright>=1.1.391",
    "ruff>=0.8.4",
    "sphinx>=8.2.3",
]

[tool.pylint.'MESSAGES CONTROL']
enable = ["all"]
disable = ["R0801", "I0011", "I0020"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["PT009", "D203", "D213", "COM812", "ISC001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
typeCheckingMode = "strict"
